[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/TestLab.gd" id="1"]

[node name="TestLabPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="ToggleDebug" type="Button" parent="."]
layout_mode = 0
anchors_preset = 0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
text = "Hide Panel"

[node name="DebugPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 64.0
offset_right = 430.0
offset_bottom = -207.0
grow_vertical = 2
mouse_filter = 0

[node name="VBox" type="VBoxContainer" parent="DebugPanel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
theme_override_constants/separation = 6

[node name="Title" type="Label" parent="DebugPanel/VBox"]
layout_mode = 2
text = "Test Lab"
horizontal_alignment = 1

[node name="ButtonColumns" type="HBoxContainer" parent="DebugPanel/VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="LeftColumn" type="VBoxContainer" parent="DebugPanel/VBox/ButtonColumns"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="RightColumn" type="VBoxContainer" parent="DebugPanel/VBox/ButtonColumns"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="StartCombat" type="Button" parent="DebugPanel/VBox/ButtonColumns/LeftColumn"]
layout_mode = 2
text = "Start Combat"

[node name="StartElite" type="Button" parent="DebugPanel/VBox/ButtonColumns/LeftColumn"]
layout_mode = 2
text = "Start Elite"

[node name="StartBoss" type="Button" parent="DebugPanel/VBox/ButtonColumns/LeftColumn"]
layout_mode = 2
text = "Start Boss"

[node name="ShowMap" type="Button" parent="DebugPanel/VBox/ButtonColumns/LeftColumn"]
layout_mode = 2
text = "Show Map"

[node name="ShowShop" type="Button" parent="DebugPanel/VBox/ButtonColumns/LeftColumn"]
layout_mode = 2
text = "Show Shop"

[node name="ShowVictory" type="Button" parent="DebugPanel/VBox/ButtonColumns/LeftColumn"]
layout_mode = 2
text = "Show Victory"

[node name="ShowDefeat" type="Button" parent="DebugPanel/VBox/ButtonColumns/LeftColumn"]
layout_mode = 2
text = "Show Defeat"

[node name="AddGold" type="Button" parent="DebugPanel/VBox/ButtonColumns/LeftColumn"]
layout_mode = 2
text = "Add 100 Gold"

[node name="AddPunch" type="Button" parent="DebugPanel/VBox/ButtonColumns/LeftColumn"]
layout_mode = 2
text = "Add Punch"

[node name="AddWound" type="Button" parent="DebugPanel/VBox/ButtonColumns/LeftColumn"]
layout_mode = 2
text = "Add Wound"

[node name="UnlockExplosive" type="Button" parent="DebugPanel/VBox/ButtonColumns/RightColumn"]
layout_mode = 2
text = "Unlock Explosives"

[node name="UnlockSpikes" type="Button" parent="DebugPanel/VBox/ButtonColumns/RightColumn"]
layout_mode = 2
text = "Unlock Spikes"

[node name="UnlockMiracle" type="Button" parent="DebugPanel/VBox/ButtonColumns/RightColumn"]
layout_mode = 2
text = "Unlock Miracle"

[node name="ModExplosive" type="Button" parent="DebugPanel/VBox/ButtonColumns/RightColumn"]
layout_mode = 2
text = "Use Explosives"

[node name="ModSpikes" type="Button" parent="DebugPanel/VBox/ButtonColumns/RightColumn"]
layout_mode = 2
text = "Use Spikes"

[node name="ModMiracle" type="Button" parent="DebugPanel/VBox/ButtonColumns/RightColumn"]
layout_mode = 2
text = "Use Miracle"

[node name="ClearMod" type="Button" parent="DebugPanel/VBox/ButtonColumns/RightColumn"]
layout_mode = 2
text = "Clear Mod"

[node name="RefillEnergy" type="Button" parent="DebugPanel/VBox/ButtonColumns/RightColumn"]
layout_mode = 2
text = "Refill Energy"

[node name="HealFull" type="Button" parent="DebugPanel/VBox/ButtonColumns/RightColumn"]
layout_mode = 2
text = "Heal Full"

[node name="ClearBricks" type="Button" parent="DebugPanel/VBox/ButtonColumns/RightColumn"]
layout_mode = 2
text = "Clear Bricks"

[node name="PassLevel" type="Button" parent="DebugPanel/VBox/ButtonColumns/RightColumn"]
layout_mode = 2
text = "Pass Level"

[node name="BackMenu" type="Button" parent="DebugPanel/VBox/ButtonColumns/RightColumn"]
layout_mode = 2
text = "Back to Menu"
